[gd_scene load_steps=2 format=3 uid="uid://c7if21iigi8eb"]

[ext_resource type="Script" path="res://escenas/masmorras/enemigo/enemigo.gd" id="1_bxivx"]

[node name="Enemigo" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_bxivx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AtaqueValorRecibidoAlEnemigo" type="Label" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 50

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Moral" type="PanelContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/Moral"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/Moral/VBoxContainer"]
layout_mode = 2
text = "moral"
horizontal_alignment = 1

[node name="MoralPB" type="ProgressBar" parent="VBoxContainer/PanelContainer2/VBoxContainer/Moral/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Mana" type="PanelContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/Mana"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/Mana/VBoxContainer"]
layout_mode = 2
text = "mana"
horizontal_alignment = 1

[node name="ManaPB" type="ProgressBar" parent="VBoxContainer/PanelContainer2/VBoxContainer/Mana/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="estadistiques" type="PanelContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques"]
layout_mode = 2

[node name="Ataque" type="PanelContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Ataque"]
layout_mode = 2

[node name="titul" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Ataque/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ataque"
horizontal_alignment = 1

[node name="AtaqueValor" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Ataque/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="Defensa" type="PanelContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Defensa"]
layout_mode = 2

[node name="titul" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Defensa/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "defensa"
horizontal_alignment = 1

[node name="DefensaValor" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Defensa/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="Hechizo" type="PanelContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Hechizo"]
layout_mode = 2

[node name="titul" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Hechizo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "hechizo"
horizontal_alignment = 1

[node name="HechizoValor" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer/estadistiques/VBoxContainer/Hechizo/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1

[node name="TimerPlayer" type="Timer" parent="."]

[connection signal="timeout" from="TimerPlayer" to="." method="_on_timer_player_timeout"]
